--- a/src/components/Photos/style.module.css
+++ b/src/components/Photos/style.module.css
@@ -1,13 +1,14 @@
 .carousel h5,
 .carousel p {
     font-weight: bold;
-    filter: drop-shadow(2px 2px 0px black) drop-shadow(1px -1px 0px black) drop-shadow(-1px 1px 0px black) drop-shadow(-1px -1px 0px black) drop-shadow(0px 0px 4px rgb(54, 54, 54));
 }
 
 .carousel h5 {
     font-size: 2.5em;
+    filter: drop-shadow(2.5px 2.5px 0px rgb(29, 29, 196)) drop-shadow(.1px -.1px 0px rgb(29, 29, 196)) drop-shadow(-.1px .1px 0px rgb(29, 29, 196)) drop-shadow(-.1px -.1px 0px rgb(29, 29, 196)) drop-shadow(0px 0px 12px rgb(2, 2, 95));
 }
 
 .carousel p {
     font-size: 1.1em;
+    filter: drop-shadow(2px 2px 0px rgb(29, 29, 196)) drop-shadow(.1px -.1px 0px rgb(29, 29, 196)) drop-shadow(-.1px .1px 0px rgb(29, 29, 196)) drop-shadow(-.1px -.1px 0px rgb(29, 29, 196)) drop-shadow(0px 0px 7px rgb(2, 2, 95));
 }
