--- a/src/components/BuddyPoke/style.module.css
+++ b/src/components/BuddyPoke/style.module.css
@@ -1,3 +1,13 @@
 .form input[type="radio"] {
     margin-right: .5em;
 }
+
+@media screen and (max-width: 600px) {
+    .formWrapper {
+        width: 42%;
+    }
+
+    .buddypoke {
+        object-fit: contain;
+    }
+}
