--- a/src/components/Certifications/style.module.css
+++ b/src/components/Certifications/style.module.css
@@ -1,6 +1,13 @@
-.certifications button{
+.certifications button {
     background-color: transparent;
     border: none;
 
     text-decoration: underline;
+}
+
+.certifications input {
+    border-radius: .5em;
+
+    border-width: 1px;
+    border-color: rgb(223, 223, 223);
 }
