--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -11,16 +11,41 @@
 
 .logoBg {
     background: linear-gradient(white 60%, var(--grayMedium));
+    width: 15vw;
 }
 
-.resumeLink{
+@media screen and (max-width: 1000px) {
+    .logoBg {
+        width: 20vw;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .logoBg {
+        width: 30vw;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .logoBg {
+        width: 50vw;
+    }
+}
+
+.resumeLink {
     margin-right: 8em;
     text-decoration: none;
     color: white;
     font-weight: 500;
 }
 
-.resumeLink:hover{
+.resumeLink:hover {
     color: white;
     opacity: 90%;
 }
+
+@media screen and (max-width: 420px) {
+    .resumeLink {
+      margin-right: 4em;
+    }
+  }
