--- a/src/components/Photos/style.module.css
+++ b/src/components/Photos/style.module.css
@@ -12,3 +12,15 @@
     font-size: 1.1em;
     filter: drop-shadow(2px 2px 0px rgb(29, 29, 196)) drop-shadow(.1px -.1px 0px rgb(29, 29, 196)) drop-shadow(-.1px .1px 0px rgb(29, 29, 196)) drop-shadow(-.1px -.1px 0px rgb(29, 29, 196)) drop-shadow(0px 0px 7px rgb(2, 2, 95));
 }
+
+@media screen and (max-width: 700px) {
+    .photosContainer {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .photosContainer {
+        width: 100%;
+    }
+}
